# polymath

./: .gitignore  4096_vocab_600_steps_report.md  CODEBASE_REFERENCE.md  Improve_doc.md  README.md  pyproject.toml
configs/: large.yaml  medium.yaml  openmythos_small.yaml  openmythos_tiny.yaml  polymath_2b.yaml  polymath_small.yaml  polymath_tiny.yaml  small.yaml  tiny.yaml
docs/: Audit_Improve.md  CODEBASE_REFERENCE.md
llm_learn/: __init__.py  config.py  model.py  prepare_data.py  sample.py  train.py
polymath/: __init__.py  config.py  dataset.py  model.py  prepare_code_data.py  prepare_data.py  prepare_hf_data.py  sample.py  tokenizer.py  train.py  train_tokenizer.py
