[project]
name = "llm-learn-models"
version = "0.1.0"
description = "Transformer variants training (Standard, Kimi AttnRes, DeepSeek mHC)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "tiktoken",
    "pyyaml",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
