[project]
name = "polymath"
version = "0.1.0"
description = "PolyMath: Unified <=2B Architecture merging Anthropic reverse-engineered Mythos/Fable 5 Recurrent-Depth Loop, Kimi AttnRes, and DeepSeek MLA/MoE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.11.0",
    "torchaudio",
    "torchvision",
    "numpy",
    "tqdm",
    "tiktoken",
    "pyyaml",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://repo.amd.com/rocm/whl/gfx110X-all/"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
