[project]
name = "polymath"
version = "0.1.0"
description = "PolyMath: Unified <=2B Architecture merging Anthropic reverse-engineered Mythos/Fable 5 Recurrent-Depth Loop, Kimi AttnRes, and DeepSeek MLA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "tqdm",
    "tiktoken",
    "pyyaml",
    "tokenizers>=0.19.1",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
